<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.2.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	
	<groupId>com.lasrosas.iot</groupId>
	<artifactId>services</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Las Rosas IOT Services</name>
	<description>Services for Las Rosas IOT</description>

	<properties>
		<java.version>14</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
        <dependency>
            <groupId>com.hivemq</groupId>
            <artifactId>hivemq-mqtt-client</artifactId>
            <version>1.2.0</version>
        </dependency>
		<dependency>
		  <groupId>com.google.code.gson</groupId>
		  <artifactId>gson</artifactId>
		  <version>2.8.6</version>
		</dependency>
    		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <configuration>
			        <release>14</release>
			        <compilerArgs>
			            <arg>--enable-preview</arg>
			        </compilerArgs>
			        <forceJavacCompilerUse>true</forceJavacCompilerUse>
			        <parameters>true</parameters>
			    </configuration>
			</plugin>
			
			<plugin>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <configuration>
			        <argLine>--enable-preview</argLine>
			    </configuration>
			</plugin>
		</plugins>
	</build>

</project>